--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /Unidade-II-Processos-Middleware-Paradigmas de Comunicacao/3-ProblemasDeProgramacao1/Ex2/target/
 /Unidade-II-Processos-Middleware-Paradigmas de Comunicacao/3-ProblemasDeProgramacao1/Ex3/target/
 /Unidade-II/exemploRpcJava/target/
+/Unidade-II/3-ProblemasDeProgramacao/Ex4/target/
+/Unidade-II/3-ProblemasDeProgramacao/Ex5/target/
+/Unidade-II/3-ProblemasDeProgramacao/Ex6/target/
+/Unidade-II/3-ProblemasDeProgramacao/Ex7/target/
